data/derived/comb/progs/unify/prog3617.ml.out
Characters 90-114:
  List.fold_left f base fs;;
  ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (int -> 'a) -> 'a
       but an expression was expected of type int
